get user membership list
